[gd_scene load_steps=10 format=2]

[ext_resource path="res://resources/materials/weapon_components/buzzsaw.material" type="Material" id=1]
[ext_resource path="res://scripts/weapon_compontents/buzzsaw.gd" type="Script" id=2]
[ext_resource path="res://resources/sounds/weapon_components/sword_hit_impact_04.wav" type="AudioStream" id=3]
[ext_resource path="res://resources/sounds/weapon_components/bow_crossbow_arrow_shoot_type2_04.wav" type="AudioStream" id=4]
[ext_resource path="res://resources/sounds/weapon_components/sword_hit_impact_heavy_03.wav" type="AudioStream" id=5]
[ext_resource path="res://resources/meshes/weapon_components/buzzsaw.tres" type="ArrayMesh" id=9]

[sub_resource type="CylinderMesh" id=4]
top_radius = 0.05
bottom_radius = 0.05
height = 1.0
radial_segments = 8
rings = 0

[sub_resource type="SpatialMaterial" id=5]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 1, 1, 1, 0.117647 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 0.125, 0.01, 0.35 )

[node name="Area" type="Area" groups=["Bullet"]]
visible = false
collision_layer = 8
collision_mask = 3
script = ExtResource( 2 )
speed = 0.7

[node name="SawMesh" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.7 )
portal_mode = 3
mesh = ExtResource( 9 )
material/0 = ExtResource( 1 )

[node name="Line" type="MeshInstance" parent="."]
visible = false
portal_mode = 3
cast_shadow = 0
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.35 )
shape = SubResource( 6 )

[node name="Lifetime" type="Timer" parent="."]
process_mode = 0
wait_time = 2.0
one_shot = true
autostart = true

[node name="ShotAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
unit_size = 1.6
bus = "Effects"

[node name="ImpactAudioDamage" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 5 )
unit_size = 3.0
bus = "Effects"

[node name="ImpactAudioCorpse" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )
unit_size = 3.0
bus = "Effects"

[connection signal="body_entered" from="." to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
[connection signal="finished" from="ShotAudio" to="." method="_on_ShotAudio_finished"]
[connection signal="finished" from="ImpactAudioDamage" to="." method="_on_ImpactAudioDamage_finished"]
[connection signal="finished" from="ImpactAudioCorpse" to="." method="_on_ImpactAudioCorpse_finished"]
